Connect to Upstash's Redis cache

--- a/.env.example
+++ b/.env.example
@@ -24,6 +24,9 @@ NEXTAUTH_URL="http://localhost:3000"
 GOOGLE_CLIENT_ID=""
 GOOGLE_CLIENT_SECRET=""
 
+# Redis
+REDIS_URL=""
+
 # GPT
 OPENAI_API_KEY=""
 TEMPERATURE="1"
